--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,6 @@ name: tracker
 services:
   be:
     build: .
-    container_name: tracker
-    ports:
-      - "8080:8080"
     depends_on:
       - questdb
       - grafana
@@ -50,6 +47,15 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "4001:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - be
 
 volumes:
   questdb-data:
